<resources>
    <string name="app_name">Wapp</string>
    <string name="txtLocal">São Paulo, BR</string>
    <string name="txtHumidity">99</string>
    <string name="txtTemp">13ºC</string>
    <string name="btnPemission">Permitir</string>
    <string name="txtTitlePemission">Precisamos da sua permissão...</string>
    <string name="txtPemission">Para usar a aplicação, você precisa nos permitir usar algumas funções, como:
        \n \n • localização; \n • conexão wi-fi e internet. \n \n \n \n \n \n \n \n \n
        Caso queira usar o app, clique no botão abaixo!
    </string>

    <string name="txtTitleInfo">Informações</string>
    <string name="btnHistory">History Button</string>
    <string name="btnHome">Home Button</string>
    <string name="btnInfo">Info Button</string>
    <string name="txtTitleRecent">Recentes</string>
    <string name="searchHint">Pesquise um lugar e saiba como está seu clima!</string>
    <string name="txtTitleFavorite">Favoritos</string>
    <string name="txtGraficoTitle">Gráfico Climático</string>
    <string name="txtPrecipitacaoTitle">Precipitação</string>
    <string name="txtFavorito">Clicando neste icone no canto superio direito da tela, você pode favoritar uma região para uma proxima visualização</string>
    <string name="txtPrecipitacao">Este icone significa a chance de chuva  em determinada região</string>
    <string name="txtGraficoT">Este icone mostra, em forma de desenho, o clima da região</string>
    <string name="appwidget_text">WAPP \n 13ºC | 99%</string>
    <string name="add_widget">Adicione um widget da Wapp!</string>
    <string name="app_widget_description">Veja o clima com o widget da Wapp!</string>
</resources>